--- a/src/main/resources/templates/pages/quotation-details.html
+++ b/src/main/resources/templates/pages/quotation-details.html
@@ -20,8 +20,6 @@
     <!-- Main content -->
     <div class="main-content">
         <div class="container-fluid mt-4">
-
-            
             <div class="page-head">
                 <h1 class="page-title">Quotation Details: <em><span th:text="${quotation.name}"></span></em></h1>
             </div>
@@ -58,11 +56,11 @@
                         </div>
                         <div class="mb-3">
                             <span class="field-label">Transaction Date:</span>
-                            <span th:text="${quotation.transaction_date}"></span>
+                            <span th:text="${quotation.transactionDate}"></span>
                         </div>
                         <div class="mb-3">
                             <span class="field-label">Grand Total:</span>
-                            <span th:text="${quotation.grand_total}"></span>
+                            <span th:text="${#numbers.formatDecimal(quotation.grandTotal, 0, 'COMMA', 2, 'POINT')}"></span>
                         </div>
                     </div>
                 </div>
